🚧 Work in progress : i added popup card to the map

--- a/src/components/MAP/index.css
+++ b/src/components/MAP/index.css
@@ -3,9 +3,6 @@
         width: 100%;
 }
 
-.leaflet-popup-content-wrapper {
+/* .leaflet-popup-content-wrapper {
         background-color: red;
-	& button{
-		background-color: blue;
-	}
-}
+} */
