--- a/src/components/AUTOCOMPLETE/index.module.css
+++ b/src/components/AUTOCOMPLETE/index.module.css
@@ -19,6 +19,7 @@
 	background:url("/images/icon-location.svg") no-repeat;
 	background-size: 20px;
 	background-position: 10px 50%;
+	padding-left: 40px;
 
 
 
