--- a/src/components/DETAILS_CARD/index.module.css
+++ b/src/components/DETAILS_CARD/index.module.css
@@ -43,9 +43,9 @@
 .cardCuisineContent,
 .cardRatingContent {
         padding-left: 10px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+        /* overflow: hidden; */
+        /* text-overflow: ellipsis; */
+        /* white-space: nowrap; */
 }
 
 @media (max-width: 768px) {
@@ -56,7 +56,7 @@
                 /* height:auto; */
                 /* height: 30vh; */
                 top: 40%;
-                width: 60vw;
+                width: 69vw;
                 /* text-align: center; */
                 /* margin: 0 auto; */
                 font-size: 15px;
